fixed display of tech-blog logo fixed rendering weirdness with fonts on firefox slight css improvements closes #24

--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -41,6 +41,6 @@
 @mixin medium() {
   font-family: 'neue_einstellungmedium';
 }
-@mixin italic() {
+@mixin light_italic() {
   font-family: 'argent_cflight_italic';
 }
