--- a/css/main.sass
+++ b/css/main.sass
@@ -1,4 +1,3 @@
-
 // variables
 $light-blue: #BAD2ED
 $blue: #3360CC
@@ -8,12 +7,16 @@ $dark-grey: #4A4A4A
 $light-grey: #CACACA
 $holmusk-green: #A2D729
 
+  
 // fonts
 @import "fonts"
 
 // clean-blog base
 @import "clean-blog-sass"
 
+html
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
 body
   font-family: 'neue_einstellungregular', sans-serif
 
